[metadata]
name = rfi3dct
version = 4.0.1
author = "Luis Perdigao, Jan Arnold, Herman Fung, Julia Mahamid (EMBL)"
author_email = luis.perdigao@rfi.ac.uk

license = GPLv3
description = 3D Correlation Toolbox - 3DCT , RFI fork
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    Topic :: Software Development :: Testing
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Operating System :: OS Independent
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)


[options]

# add your package requirements here
install_requires =
    pyqt5
    redlionfish
    opencv-python
    qimage2ndarray
    colorama
    matplotlib
    tifffile
    scikit-image
    psutil

#packages = find:
#packages = find_namespace:
include_package_data = True

[options.package_data]

rfi3dct=
    *.ui
    *.qrc

rfi3dct.icons=
    *.icns
    *.ico
    *.png
    *.gif
    *.xcf

tools3dct=
    *.ui

[options.entry_points]
console_scripts =
    rfi3dct = rfi3dct.TDCT_main:main
